--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First three.js Project</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
